# vala_tdlib

./: meson.build
src/: TDInterface.vala  meson.build  vala-tdlib.h  vala_tdlib-version.h.in
